--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@
   display: flex;
   place-content: center;
   overflow: hidden;
-  background: rgba(255, 255, 255, 0.2);
+  background: url('./assets/images/lines2.png');
   border-radius: 30px;
 }
 
